[#17742] Non-indexed query aggregation type alignment
* Align return types for aggregation functions between indexed and non-indexed
* Add non-indexed query aggregation tests
* Move all query.dsl.embedded.impl classes to query.core.impl
* Unify core.impl.QueryEngine and dsl.embedded.impl.QueryEngine